2003-10-12  Marcus Brinkmann  <marcus@gnu.org>

	* acinclude.m4: New file.
	* configure.ac: Include laden/config.m4, wortel/config.m4, and
	physmem/config.m4.

2003-09-22  Marcus Brinkmann  <marcus@gnu.org>

	* configure.ac: Always define the automake conditionals ARCH_* to
	true or false.

	* configure.ac: Define $arch to ia32 or powerpc.  Do not include
	arch specific libl4/headers.m4.

	* configure.ac: Add detection of powerpc architecture.
	(AC_CONFIG_FILES): Add libl4/powerpc/Makefile.

2003-09-07  Neal H. Walfield  <neal@cs.uml.edu>

	* configure.ac: Check for latex, dvips and ps2pdf.  Bail if not
	found.  Generate doc/Makefile.

2003-07-26  Marcus Brinkmann  <marcus@gnu.org>

	* Initial check-in.
