@@ -1,0 +1,148 @@
+#FIG 3.2
+Portrait
+Center
+Metric
+A4      
+100.00
+Single
+-2
+1200 2
+2 2 0 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 5625 1125 6525 1125 6525 5175 5625 5175 5625 1125
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 4050 1350 5625 1350
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 5625 1575 4050 1575
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 6525 1350 7200 1350
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 7200 1575 6525 1575
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 4050 2475 5625 2475
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 6525 2475 7200 2475
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 7200 2700 6525 2700
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 5625 2700 4050 2700
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 4050 3600 5625 3600
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 6525 3600 7200 3600
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 7200 3825 6525 3825
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 5625 3825 4050 3825
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 7650 4050 7650 4500
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 7875 4500 7875 4050
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 4
+	1 1 1.00 60.00 120.00
+	 7650 5175 7650 5400 2250 5400 2250 5175
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 4
+	1 1 1.00 60.00 120.00
+	 2025 5175 2025 5625 7875 5625 7875 5175
+2 2 0 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 7200 1125 8100 1125 8100 1800 7200 1800 7200 1125
+2 2 0 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 7200 2250 8100 2250 8100 2925 7200 2925 7200 2250
+2 2 0 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 7200 3375 8100 3375 8100 4050 7200 4050 7200 3375
+2 2 0 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 7200 4500 8100 4500 8100 5175 7200 5175 7200 4500
+2 2 1 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 6300 900 8325 900 8325 5850 6300 5850 6300 900
+2 2 0 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 4500 4050 5400 4050 5400 5175 4500 5175 4500 4050
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 4500 4275 4050 4275
+2 2 0 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 3375 1125 4050 1125 4050 5175 3375 5175 3375 1125
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 2700 1350 3375 1350
+2 2 0 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 1800 1125 2700 1125 2700 2250 1800 2250 1800 1125
+2 2 0 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 1800 2610 2700 2610 2700 3735 1800 3735 1800 2610
+2 2 0 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 1800 4050 2700 4050 2700 5175 1800 5175 1800 4050
+2 1 0 1 0 7 60 -1 -1 4.000 0 0 -1 1 0 2
+	1 1 1.00 60.00 120.00
+	 2070 2610 2070 2250
+2 2 1 1 0 7 60 -1 -1 4.000 0 0 -1 0 0 5
+	 1575 900 5850 900 5850 5850 1575 5850 1575 900
+2 1 2 1 0 7 60 -1 -1 3.000 0 0 -1 0 0 2
+	 5400 4725 3375 4725
+2 1 2 1 0 7 60 -1 -1 3.000 0 0 -1 0 0 2
+	 4500 5175 4050 5175
+2 1 2 1 0 7 60 -1 -1 3.000 0 0 -1 0 0 2
+	 2700 5175 3375 4275
+2 1 2 1 0 7 60 -1 -1 3.000 0 0 -1 0 0 3
+	 1800 4725 2700 4725 3375 3825
+2 1 2 1 0 7 60 -1 -1 3.000 0 0 -1 0 0 2
+	 3375 3825 4050 3825
+2 1 2 1 0 7 60 -1 -1 3.000 0 0 -1 0 0 2
+	 3375 4275 4050 4275
+2 1 2 1 0 7 60 -1 -1 3.000 0 0 -1 0 0 4
+	 1800 3150 2700 3150 3375 2925 4050 2925
+2 1 2 1 0 7 60 -1 -1 3.000 0 0 -1 0 0 3
+	 2700 3735 3375 3510 4050 3510
+2 1 2 1 0 7 60 -1 -1 3.000 0 0 -1 0 0 3
+	 1800 1800 2700 1800 3375 2025
+2 1 2 1 0 7 60 -1 -1 3.000 0 0 -1 0 0 2
+	 3375 2025 4050 2025
+2 1 2 1 0 7 60 -1 -1 3.000 0 0 -1 0 0 3
+	 2700 2250 3375 2475 4050 2475
+4 0 0 60 -1 0 12 0.0000 4 135 135 2250 2475 1.\001
+4 0 0 60 -1 0 12 0.0000 4 135 135 3150 1260 2.\001
+4 0 0 60 -1 0 12 0.0000 4 135 135 5400 3375 3.\001
+4 0 0 60 -1 0 12 0.0000 4 135 225 5400 2250 16.\001
+4 0 0 60 -1 0 12 0.0000 4 135 225 5400 1125 11.\001
+4 0 0 60 -1 0 12 0.0000 4 135 225 4275 1800 14.\001
+4 0 0 60 -1 0 12 0.0000 4 135 225 4275 2925 20.\001
+4 0 0 60 -1 0 12 0.0000 4 135 225 4275 4050 10.\001
+4 0 0 60 -1 0 12 0.0000 4 135 225 4275 4500 15.\001
+4 0 0 60 -1 0 12 0.0000 4 135 225 6975 1125 12.\001
+4 0 0 60 -1 0 12 0.0000 4 135 225 6975 2250 17.\001
+4 0 0 60 -1 0 12 0.0000 4 135 225 6750 2925 18.\001
+4 0 0 60 -1 0 12 0.0000 4 135 225 6750 1800 13.\001
+4 0 0 60 -1 0 12 0.0000 4 135 135 6975 3375 4.\001
+4 0 0 60 -1 0 12 0.0000 4 135 135 6750 4050 9.\001
+4 0 0 60 -1 0 12 0.0000 4 135 135 7425 4275 5.\001
+4 0 0 60 -1 0 12 0.0000 4 135 135 8100 4275 8.\001
+4 0 0 60 -1 0 12 0.0000 4 135 135 8100 5400 7.\001
+4 0 0 60 -1 0 12 0.0000 4 135 135 2475 5400 6.\001
+4 0 0 60 -1 0 12 0.0000 4 135 225 4275 4950 21.\001
+4 0 0 60 -1 0 12 0.0000 4 135 240 1575 6075 ddf\001
+4 0 0 60 -1 0 12 0.0000 4 135 330 8010 6075 hurd\001
+4 0 0 60 -1 0 12 0.0000 4 135 705 1890 1530 Root Bus\001
+4 0 0 60 -1 0 12 0.0000 4 135 480 1890 1755 Driver\001
+4 0 0 60 -1 0 12 0.0000 4 135 630 1845 2880 PCI Bus\001
+4 0 0 60 -1 0 12 0.0000 4 135 480 1845 3105 Driver\001
+4 0 0 60 -1 0 12 0.0000 4 135 315 1935 4365 IDE\001
+4 0 0 60 -1 0 12 0.0000 4 135 480 1935 4590 Driver\001
+4 0 0 60 -1 0 12 0.0000 4 135 315 4590 4365 NIC\001
+4 0 0 60 -1 0 12 0.0000 4 135 480 4590 4590 Driver\001
+4 0 0 60 -1 0 12 0.0000 4 135 375 3465 1530 PLM\001
+4 0 0 60 -1 0 12 0.0000 4 135 405 5850 1530 Deva\001
+4 0 0 60 -1 0 12 0.0000 4 135 480 7245 1485 wortel\001
+4 0 0 60 -1 0 12 0.0000 4 180 720 7245 2610 physmem\001
+4 0 0 60 -1 0 12 0.0000 4 135 330 7290 3780 ext2\001
+4 0 0 60 -1 0 12 0.0000 4 180 795 7290 4815 ddwrapper\001
