@@ -1,6 +1,7 @@
 \documentclass{book}
 %\usepackage{german}
 %\usepackage[margin=2.5cm]{geometry}
+\usepackage{graphicx}
 
 \newenvironment{comment}{\footnotesize \begin{quote}}{\end{quote}}
 
